# loom.a.ne

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  artifact.py  flags.py  hidlisten.py  ideas.md  partitions.csv  platformio.ini  sdkconfig.lolin_s2_mini  sdkconfig.seeed_xiao_esp32s3  structure.md
.github/workflows/: ci.yaml
artifact/: bootstrap.py  common.py  meson.build
artifact/bootstrap/templates/: activate.bat  activate.ps1  activate.py  activate.sh
artifact/environment/banner/: meson.build  native.ini
artifact/environment/native/: meson.build  native.ini  native.py
artifact/environment/native/include/: meson.build
artifact/generator/: meson.build  txt2hpp.py
artifact/generator/templates/: banner_defs.ini
artifact/generator/templates/include/lm/: build.hpp
artifact/subprojects/: .gitignore  libusb.wrap  tinyusb.wrap
artifact/subprojects/packagefiles/tinyusb/: meson.build  meson_options.txt
assets/: default_config.ini
assets/static/: test.txt
assets/templates/: loomane_defs.cmake
boards/: native.json
include/espy/: aliases.hpp  blink.hpp  bus.hpp  config.hpp  logging.hpp  renum.hpp  stopwatch.hpp  task.hpp
include/espy/usb/: cdc.hpp  cdc.old.hpp  common.hpp  esp32.hpp  hid.hpp  logging.hpp  midi.hpp  msc.hpp  uac2.hpp  usb.hpp
include/espy/usb/internal/: tusb_config.h
include/espy/utils/: guarded.hpp  math.hpp
include/lm/: aliases.hpp  banner.hpp  board.hpp  build.hpp.in  bus.hpp  chip.hpp  config.hpp  config_ini.hpp  core.hpp  entrypoint.hpp  fabric.hpp  hooks.hpp  ini.hpp  inicfg.hpp  log.hpp  port.hpp  registry.hpp  task.hpp  test.hpp  usbd.hpp  usbip.hpp
include/lm/arch/esp32s2/: banner.txt  endpoints.hpp  name.txt
include/lm/arch/x86_64/: banner.txt  endpoints.hpp  name.txt  program_args.hpp
include/lm/board/lolin_s2_mini/: board.hpp  partitions.csv
include/lm/board/lolin_s2_mini/lm/: board.hpp
include/lm/board/native/lm/: board.hpp
include/lm/boards/lolin_s2_mini/: loomane_bsp.hpp
include/lm/boards/lolin_s2_mini/lm/: board.hpp
include/lm/chip/: gpio.hpp  info.hpp  memory.hpp  net.hpp  sensor.hpp  system.hpp  time.hpp  types.hpp  uart.hpp  usb.hpp
include/lm/config/: config_ini.hpp  config_rw.hpp  ini.hpp
include/lm/core/: ansi.hpp  cvt.hpp  endian.hpp  hash.hpp  helpers.hpp  math.hpp  reflect.hpp  traits.hpp  types.hpp  veil.hpp
include/lm/core/primitives/: bitset.hpp  guarded.hpp  synchronized_registry.hpp
include/lm/fabric/: all.hpp  bus.hpp  primitives.hpp  register_strand.hpp  strand.hpp  strand_registry.hpp  task.hpp  types.hpp  utils.hpp
include/lm/lib/: hid.hpp  midi.hpp
include/lm/strands/: apply_config.hpp  blink.hpp  busmon.hpp  example.hpp  healthmon.hpp  log.hpp  strandman.hpp  usbd.hpp  usbip.hpp
include/lm/strands/usb/: controller.hpp
include/lm/strands/usb/device/: midi.hpp
include/lm/strands/usb/transport/: usbip.hpp
include/lm/task/: types.hpp
include/lm/tasks/: app.hpp  blink.hpp  busmon.hpp  example.hpp  healthmon.hpp  log.hpp  logging.hpp  tman.hpp  usbd.hpp
include/lm/usb/: backend.hpp  common.hpp  debug.hpp
include/lm/usbd/: audio.hpp  cdc.hpp  common.hpp  dcd.hpp  descriptors.hpp  esp32.hpp  hid.hpp  midi.hpp  msc.hpp  uac2.hpp  usbd.hpp  usbip_types.hpp
include/lm/usbd/include/: tusb_config.h
include/lm/usbd/internal/: tusb_config.h
include/lm/utils/: guarded.hpp  math.hpp  renum.hpp  stopwatch.hpp
include/lm/version/: banner.hpp  defs.hpp.in
scripts/: hidlisten.py  pio_add_winlibs.py  pio_extra_targets.py  pio_gen_defs.py  pio_gen_prebuild.py  pio_gen_version_defs.py  uartilisten.bat
scripts/lm/: log.py
scripts/pio/: add_winlibs.py  common.py  configure_tinyusb.py  extra_targets.py  generate_build_files.py  setup_boost.py
src/: CMakeLists.txt  idf_component.yml  main.cpp  main_banner.cpp  uart_bridge.ino
src/espy/: blink.cpp  bus.cpp  logging.cpp  task.cpp
src/espy/usb/: cdc.cpp  cdc.old.cpp  common.cpp  hid.cpp  logging.cpp  midi.cpp  msc.cpp  uac2.cpp  usb.cpp
src/lm/: banner.cpp  bus.cpp  config.cpp  entrypoint.cpp  gen_build_info.cpp  hooks.cpp  ini.cpp  ini.multikey.test.cpp  ini.test.cpp  log.cpp  registry.cpp  task.cpp  test.cpp
src/lm/arch/esp32s2/: dcd_dwc2.cpp  hal.cpp  osal.cpp
src/lm/arch/esp32s2/chip/: net.cpp
src/lm/arch/esp32s2/main/: loomane.cpp
src/lm/arch/freertos/: osal.cpp
src/lm/arch/native/: hal.cpp  osal.cpp  tusb.cpp
src/lm/arch/x86_64/: arch_hooks.cpp  entrypoint.cpp  hal.cpp  hooks.cpp  osal.cpp  program_args.cpp  tusb.cpp
src/lm/arch/x86_64/chip/: gpio.cpp  info.cpp  memory.cpp  net.cpp  sensor.cpp  system.cpp  time.cpp  uart.cpp  usb.cpp
src/lm/arch/x86_64/fabric/: primitives.cpp  strand.cpp
src/lm/arch/x86_64/main/: banner.cpp  loomane.cpp
src/lm/board/: esp32.cpp
src/lm/chips/: esp32.cpp
src/lm/core/: endian.test.cpp
src/lm/core/primitives/: bitset.test.cpp
src/lm/fabric/: bus.cpp  bus.test.cpp  event.test.cpp  register_strand.cpp  strand.cpp  strand_registry.cpp  task.cpp  utils.cpp
src/lm/lib/: midi.test.cpp
src/lm/strands/: apply_config.cpp  blink.cpp  busmon.cpp  example.cpp  healthmon.cpp  log.cpp  strandman.cpp  usbd.cpp  usbip.cpp
src/lm/strands/usb/: controller.cpp
src/lm/strands/usb/transport/: usbip.cpp
src/lm/tasks/: app.cpp  blink.cpp  busmon.cpp  example.cpp  healthmon.cpp  log.cpp  logging.cpp  sysman.cpp  tman.cpp  usbd.cpp
src/lm/test/: unit.cpp
src/lm/usb/: common.cpp
src/lm/usbd/: audio.cpp  cdc.cpp  dcd.cpp  dcd_usbip.cpp  descriptors.cpp  hid.cpp  midi.cpp  msc.cpp  uac2.cpp  usbd.cpp
src/lm/version/: banner.cpp
